# rust-agent

./: .gitignore  BOT_PERSISTENT_HISTORY.md  CRATES_AGENT_BOT_BRAIN_DESIGN.md  Cargo.toml  FURTHER_IMPROVEMENTS.md  HISTORY_COMPRESSION.md  IMPROVEMENT_PLAN.md  PERSISTENT_HISTORY.md  PERSISTENT_HISTORY_SUMMARY.md  README.md  README_CN.md  REFACTORING_SUMMARY.md  TEAM_CLI_SUMMARY.md  TEAM_IMPLEMENTATION.md  review.md
crates/agent-bot/: Cargo.toml
crates/agent-bot/examples/: brain_driver_cli.rs
crates/agent-bot/prompts/: bot.md  conversation_brain.md  introspection_brain.md  wake_up.md  work_brain.md
crates/agent-bot/src/: bot.rs  bot_prompt.rs  brain.rs  brain_driver.rs  goal_tool.rs  history_tool.rs  knowledge_base.rs  knowledge_tools.rs  lib.rs  main.rs  memory_tool.rs  soul_tool.rs  talk_tool.rs  team.rs
crates/agent-bot/tests/: DISABLED_TESTS.md  test_bot.rs  test_bot.rs.disabled  test_bot_json_protocol.rs  test_bot_json_protocol.rs.disabled  test_bot_smoke.rs  test_brain.rs  test_brain_timeout.rs  test_help_text.rs  test_memory_tool.rs  test_persistence.rs  test_soul.rs  test_talk_tool.rs  test_team.rs  test_team.rs.disabled  test_team_tools.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: app.rs  config.rs  console.rs  main.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs
crates/agent-console/: Cargo.toml
crates/agent-console/src/: lib.rs
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/examples/: persistent_history_usage.rs  session_dir_node.rs
crates/agent-core/prompts/: react_act.md  react_think.md
crates/agent-core/src/: agent.rs  agent_context.rs  agent_runner.rs  config.rs  data_store.rs  history.rs  lib.rs  react_agent.rs  recap_agent.rs  runtime.rs  session.rs  system_prompt.rs  tool_dispatch.rs
crates/agent-core/src/history/: archiver.rs  compression.rs  mod.rs  persistent.rs  token_estimator.rs
crates/agent-core/src/llm/: context.rs  mod.rs  openai.rs  openai_provider.rs  openai_stream.rs  tools_json.rs
crates/agent-core/src/support/: mod.rs
crates/agent-core/src/support/config/: mod.rs
crates/agent-core/src/support/console/: mod.rs
crates/agent-core/src/support/json/: mod.rs
crates/agent-core/src/support/skill/: mod.rs
crates/agent-core/src/support/storage/: mod.rs
crates/agent-core/src/tools/: act.rs  debug.rs  deep_think.rs  file.rs  macro_example.rs  mod.rs  shell.rs  trait.rs  types.rs
crates/agent-http/: Cargo.toml
crates/agent-http/src/: lib.rs
crates/agent-json/: Cargo.toml
crates/agent-json/src/: lib.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: context.rs  json.rs  lib.rs  openai.rs  openai_stream.rs
crates/agent-macros/: Cargo.toml
crates/agent-macros/src/: lib.rs  tool.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs
crates/agent-skill/: Cargo.toml
crates/agent-skill/src/: lib.rs
crates/agent-storage/: Cargo.toml
crates/agent-storage/src/: lib.rs
crates/agent-tests/: Cargo.toml
crates/agent-tests/src/: lib.rs
crates/agent-tests/tests/: test_agent_cli_usage.rs  test_agent_context_seeds_session_tools.rs  test_agent_context_tool_precedence.rs  test_agent_runner.rs  test_agent_system_segments.rs  test_agent_tool_loop.rs  test_agent_tool_loop_max_rounds.rs  test_bot_persistent_history.rs  test_brain_cli_usage.rs  test_cli_plan_command.rs  test_config_path.rs  test_data_store.rs  test_debug_tool.rs  test_file_edit.rs  test_file_glob.rs  test_file_read_directory.rs  test_file_read_missing.rs  test_file_read_partial.rs  test_history_compression.rs  test_history_sliding_window.rs  test_in_memory_history.rs  test_json_parse_smoke.rs  test_llm_context.rs  test_openai_request_body_includes_tools.rs  test_openai_request_includes_tools.rs  test_openai_stream_tool_calls_extract.rs  test_persistent_history.rs  test_recap_agent.rs  test_session_defaults.rs  test_session_dir_node.rs  test_shell_tool.rs  test_shell_tool_function_name.rs  test_shell_tool_safety.rs  test_tool_calls_parsing.rs  test_tool_error_message_format.rs  test_tool_macro.rs  test_tool_whitelist.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs  macro_example.rs
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: main.rs
crates/team-cli/: Cargo.toml  README.md
crates/team-cli/src/: main.rs
docs/: README.md
docs/architecture/: code-overview.md  dead-code-analysis.md  introspection-brain.md  memory-tool.md
docs/persistence/: goal-memory-persistence.md  how-to-test.md
docs/refactoring/: unified-config.md
docs/team/: tool-design.md  tool-management.md
prompts/: intuitive.md  shallow_think.md
