[workspace]
resolver = "2"
members = [
  "crates/agent-cli",
  "crates/agent-core",
  "crates/agent-tests",
  "crates/agent-macros",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
agent-macros = { path = "crates/agent-macros" }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-std", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
