[package]
name = "agent-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
async-trait.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
