[package]
name = "agent-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "agent-cli"
path = "src/main.rs"
