[package]
name = "agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-config = { path = "../agent-config" }
agent-http = { path = "../agent-http" }
agent-json = { path = "../agent-json" }
agent-llm = { path = "../agent-llm" }
agent-console = { path = "../agent-console" }
agent-tools = { path = "../agent-tools" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
