[package]
name = "agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-macros = { path = "../agent-macros" }
anyhow.workspace = true
serde.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
glob.workspace = true
async-trait = "0.1"
