[package]
name = "agent-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
agent-core = { path = "../agent-core" }
agent-json = { path = "../agent-json" }
agent-llm = { path = "../agent-llm" }
agent-runtime = { path = "../agent-runtime" }
agent-tools = { path = "../agent-tools" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
