[package]
name = "agent-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
agent-core = { path = "../agent-core" }
agent-bot = { path = "../agent-bot" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
async-trait = "0.1"
tempfile = "3"
