[package]
name = "agent-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-json = { path = "../agent-json" }
anyhow.workspace = true
glob.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tokio.workspace = true
async-trait = "0.1"
