[package]
name = "team-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-bot = { path = "../agent-bot" }
agent-core = { path = "../agent-core" }
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "team-cli"
path = "src/main.rs"
